tests/parser/bad/cmodule-field-with.scilla
scilla_version 0

contract Test
()

(* a field cannot be named field *)
field field : Bool = True
